@@ -16,6 +16,8 @@ Monthday, Month DD, YYYY:
       Support user names and passwords in rpcap:// and rpcaps:// URLs.
     Documentation:
       Improve some protocol details in pcap-filter(7).
+    Building and testing:
+      Fix building without protochain support. (GH #852)
 
 Monthday, Month DD, YYYY:
   Summary for 1.10.2 libpcap release (so far!)
